// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Family A — electron-packaged > A1 — electron-fresh (bundled dashboard, no pi) > resolves nothing for pi (darwin) 1`] = `
"name:   pi
ok:     false
source: —
path:   —
tried:
  override     no override set
  managed      missing: <HOME>/.pi-dashboard/node_modules/.bin/pi
  where        not found on PATH"
`;

exports[`Family A — electron-packaged > A1 — electron-fresh (bundled dashboard, no pi) > resolves nothing for pi (linux) 1`] = `
"name:   pi
ok:     false
source: —
path:   —
tried:
  override     no override set
  managed      missing: <HOME>/.pi-dashboard/node_modules/.bin/pi
  where        not found on PATH"
`;

exports[`Family A — electron-packaged > A1 — electron-fresh (bundled dashboard, no pi) > resolves nothing for pi (win32) 1`] = `
"name:   pi
ok:     false
source: —
path:   —
tried:
  override     no override set
  bare-import  cannot resolve @mariozechner/pi-coding-agent/package.json
  bare-import  cannot resolve @oh-my-pi/pi-coding-agent/package.json
  managed      missing: <HOME>/.pi-dashboard/node_modules/@mariozechner/pi-coding-agent/dist/cli.js
  managed      missing: <HOME>/.pi-dashboard/node_modules/@oh-my-pi/pi-coding-agent/dist/cli.js
  npm-global   missing: <NPM_ROOT>/@mariozechner/pi-coding-agent/dist/cli.js
  npm-global   missing: <NPM_ROOT>/@oh-my-pi/pi-coding-agent/dist/cli.js
  managed      missing: <HOME>/.pi-dashboard/node_modules/.bin/pi.cmd
  where        not found on PATH"
`;

exports[`Family A — electron-packaged > A2 — electron-prewarmed (bundled + managed pi) > resolves pi via managed (darwin) 1`] = `
"name:   pi
ok:     true
source: managed
path:   <HOME>/.pi-dashboard/node_modules/.bin/pi
tried:
  override     no override set
  managed      ok"
`;

exports[`Family A — electron-packaged > A2 — electron-prewarmed (bundled + managed pi) > resolves pi via managed (linux) 1`] = `
"name:   pi
ok:     true
source: managed
path:   <HOME>/.pi-dashboard/node_modules/.bin/pi
tried:
  override     no override set
  managed      ok"
`;

exports[`Family A — electron-packaged > A2 — electron-prewarmed (bundled + managed pi) > resolves pi via managed (win32) 1`] = `
"name:   pi
ok:     true
source: managed
path:   <HOME>/.pi-dashboard/node_modules/@mariozechner/pi-coding-agent/dist/cli.js
tried:
  override     no override set
  bare-import  cannot resolve @mariozechner/pi-coding-agent/package.json
  bare-import  cannot resolve @oh-my-pi/pi-coding-agent/package.json
  managed      ok"
`;

exports[`Family A — electron-packaged > A3 — electron + pre-existing global pi > global npm pi takes precedence over managed-bin fallback (linux) 1`] = `
"name:   pi
ok:     true
source: system
path:   /usr/local/bin/pi
tried:
  override     no override set
  managed      missing: <HOME>/.pi-dashboard/node_modules/.bin/pi
  where        ok"
`;

exports[`Family B — npm-global > B1 — npm-g dash-only (⚠ captures current Windows bug) > pi unresolved on darwin 1`] = `
"name:   pi
ok:     false
source: —
path:   —
tried:
  override     no override set
  managed      missing: <HOME>/.pi-dashboard/node_modules/.bin/pi
  where        not found on PATH"
`;

exports[`Family B — npm-global > B1 — npm-g dash-only (⚠ captures current Windows bug) > pi unresolved on linux 1`] = `
"name:   pi
ok:     false
source: —
path:   —
tried:
  override     no override set
  managed      missing: <HOME>/.pi-dashboard/node_modules/.bin/pi
  where        not found on PATH"
`;

exports[`Family B — npm-global > B1 — npm-g dash-only (⚠ captures current Windows bug) > pi unresolved on win32 1`] = `
"name:   pi
ok:     false
source: —
path:   —
tried:
  override     no override set
  bare-import  cannot resolve @mariozechner/pi-coding-agent/package.json
  bare-import  cannot resolve @oh-my-pi/pi-coding-agent/package.json
  managed      missing: <HOME>/.pi-dashboard/node_modules/@mariozechner/pi-coding-agent/dist/cli.js
  managed      missing: <HOME>/.pi-dashboard/node_modules/@oh-my-pi/pi-coding-agent/dist/cli.js
  npm-global   missing: <NPM_ROOT>/@mariozechner/pi-coding-agent/dist/cli.js
  npm-global   missing: <NPM_ROOT>/@oh-my-pi/pi-coding-agent/dist/cli.js
  managed      missing: <HOME>/.pi-dashboard/node_modules/.bin/pi.cmd
  where        not found on PATH"
`;

exports[`Family B — npm-global > B2 — npm-g full (pi + openspec via global npm) > pi resolves via npm-global on darwin 1`] = `
"name:   pi
ok:     true
source: system
path:   /usr/local/bin/pi
tried:
  override     no override set
  managed      missing: <HOME>/.pi-dashboard/node_modules/.bin/pi
  where        ok"
`;

exports[`Family B — npm-global > B2 — npm-g full (pi + openspec via global npm) > pi resolves via npm-global on linux 1`] = `
"name:   pi
ok:     true
source: system
path:   /usr/local/bin/pi
tried:
  override     no override set
  managed      missing: <HOME>/.pi-dashboard/node_modules/.bin/pi
  where        ok"
`;

exports[`Family B — npm-global > B2 — npm-g full (pi + openspec via global npm) > pi resolves via npm-global on win32 (with node.exe toArgv) 1`] = `
"name:   pi
ok:     true
source: npm-global
path:   <NPM_ROOT>/@mariozechner/pi-coding-agent/dist/cli.js
tried:
  override     no override set
  bare-import  cannot resolve @mariozechner/pi-coding-agent/package.json
  bare-import  cannot resolve @oh-my-pi/pi-coding-agent/package.json
  managed      missing: <HOME>/.pi-dashboard/node_modules/@mariozechner/pi-coding-agent/dist/cli.js
  managed      missing: <HOME>/.pi-dashboard/node_modules/@oh-my-pi/pi-coding-agent/dist/cli.js
  npm-global   ok
argv:
  - C:/Program Files/nodejs/node.exe
  - <NPM_ROOT>/@mariozechner/pi-coding-agent/dist/cli.js"
`;

exports[`Family B — npm-global > B3 — npm-g pi-installed-first (bridge needs registration) > settings.json present but lacks bridge entry (linux) 1`] = `
"settings-delta:
  added:
    (none)
  removed:
    (none)
  preserved:
    (none)"
`;

exports[`Family C — dev monorepo > C1 — posix (managed/where chain, no bare-import for pi) > pi chain runs on darwin 1`] = `
"name:   pi
ok:     false
source: —
path:   —
tried:
  override     no override set
  managed      missing: <HOME>/.pi-dashboard/node_modules/.bin/pi
  where        not found on PATH"
`;

exports[`Family C — dev monorepo > C1 — posix (managed/where chain, no bare-import for pi) > pi chain runs on linux 1`] = `
"name:   pi
ok:     false
source: —
path:   —
tried:
  override     no override set
  managed      missing: <HOME>/.pi-dashboard/node_modules/.bin/pi
  where        not found on PATH"
`;

exports[`Family C — dev monorepo > C2 — win32 (bare-import from workspace) > resolves pi via workspace bare-import 1`] = `
"name:   pi
ok:     true
source: bare-import
path:   dist/cli.js
tried:
  override     no override set
  bare-import  ok"
`;

exports[`Family D — overrides > D1 — override-valid: pi resolves via override 1`] = `
"name:   pi
ok:     true
source: override
path:   /opt/custom/bin/pi
tried:
  override     ok"
`;

exports[`Family D — overrides > D2 — override-invalid: path doesn't exist, chain falls through 1`] = `
"name:   pi
ok:     true
source: managed
path:   <HOME>/.pi-dashboard/node_modules/.bin/pi
tried:
  override     invalid: path does not exist: /nonexistent/broken/pi
  managed      ok"
`;

exports[`Family E — stale / partial > E1 — stale managed pi (old version) > current strategies resolve without version gating (darwin) 1`] = `
"name:   pi
ok:     true
source: managed
path:   <HOME>/.pi-dashboard/node_modules/.bin/pi
tried:
  override     no override set
  managed      ok"
`;

exports[`Family E — stale / partial > E1 — stale managed pi (old version) > current strategies resolve without version gating (linux) 1`] = `
"name:   pi
ok:     true
source: managed
path:   <HOME>/.pi-dashboard/node_modules/.bin/pi
tried:
  override     no override set
  managed      ok"
`;

exports[`Family E — stale / partial > E1 — stale managed pi (old version) > current strategies resolve without version gating (win32) 1`] = `
"name:   pi
ok:     true
source: managed
path:   <HOME>/.pi-dashboard/node_modules/@mariozechner/pi-coding-agent/dist/cli.js
tried:
  override     no override set
  bare-import  cannot resolve @mariozechner/pi-coding-agent/package.json
  bare-import  cannot resolve @oh-my-pi/pi-coding-agent/package.json
  managed      ok"
`;

exports[`Family E — stale / partial > E2 — partial managed install (package.json, no dist) > strategy skips when entry file absent (linux) 1`] = `
"name:   pi
ok:     false
source: —
path:   —
tried:
  override     no override set
  managed      missing: <HOME>/.pi-dashboard/node_modules/.bin/pi
  where        not found on PATH"
`;

exports[`Family E — stale / partial > E2 — partial managed install (package.json, no dist) > strategy skips when entry file absent (win32) 1`] = `
"name:   pi
ok:     false
source: —
path:   —
tried:
  override     no override set
  bare-import  cannot resolve @mariozechner/pi-coding-agent/package.json
  bare-import  cannot resolve @oh-my-pi/pi-coding-agent/package.json
  managed      missing: <HOME>/.pi-dashboard/node_modules/@mariozechner/pi-coding-agent/dist/cli.js
  managed      missing: <HOME>/.pi-dashboard/node_modules/@oh-my-pi/pi-coding-agent/dist/cli.js
  npm-global   missing: <NPM_ROOT>/@mariozechner/pi-coding-agent/dist/cli.js
  npm-global   missing: <NPM_ROOT>/@oh-my-pi/pi-coding-agent/dist/cli.js
  managed      missing: <HOME>/.pi-dashboard/node_modules/.bin/pi.cmd
  where        not found on PATH"
`;

exports[`Family F — cwd variants > F1 — resolves normally with Program Files (x86) cwd (win32) 1`] = `
"name:   pi
ok:     true
source: managed
path:   <HOME>/.pi-dashboard/node_modules/@mariozechner/pi-coding-agent/dist/cli.js
tried:
  override     no override set
  bare-import  cannot resolve @mariozechner/pi-coding-agent/package.json
  bare-import  cannot resolve @oh-my-pi/pi-coding-agent/package.json
  managed      ok"
`;

exports[`Family F — cwd variants > F1 — resolves normally with spaces in cwd (linux) 1`] = `
"name:   pi
ok:     true
source: managed
path:   <HOME>/.pi-dashboard/node_modules/.bin/pi
tried:
  override     no override set
  managed      ok"
`;

exports[`Family F — cwd variants > F2 — resolves with Greek/Cyrillic/emoji in cwd 1`] = `
"name:   pi
ok:     true
source: managed
path:   <HOME>/.pi-dashboard/node_modules/.bin/pi
tried:
  override     no override set
  managed      ok"
`;

exports[`Family G — Windows specifics > G1 — pi.cmd resolved + toArgv prepends node.exe (no-cmd-flash) 1`] = `
"name:   pi
ok:     true
source: managed
path:   <HOME>/.pi-dashboard/node_modules/@mariozechner/pi-coding-agent/dist/cli.js
tried:
  override     no override set
  bare-import  cannot resolve @mariozechner/pi-coding-agent/package.json
  bare-import  cannot resolve @oh-my-pi/pi-coding-agent/package.json
  managed      ok
argv:
  - C:/Program Files/nodejs/node.exe
  - <HOME>/.pi-dashboard/node_modules/@mariozechner/pi-coding-agent/dist/cli.js"
`;

exports[`Family G — Windows specifics > G2 — npm-g at %APPDATA%\\Roaming\\npm (argv prepends node.exe) 1`] = `
"name:   pi
ok:     true
source: npm-global
path:   <NPM_ROOT>/@mariozechner/pi-coding-agent/dist/cli.js
tried:
  override     no override set
  bare-import  cannot resolve @mariozechner/pi-coding-agent/package.json
  bare-import  cannot resolve @oh-my-pi/pi-coding-agent/package.json
  managed      missing: <HOME>/.pi-dashboard/node_modules/@mariozechner/pi-coding-agent/dist/cli.js
  managed      missing: <HOME>/.pi-dashboard/node_modules/@oh-my-pi/pi-coding-agent/dist/cli.js
  npm-global   ok
argv:
  - C:/Program Files/nodejs/node.exe
  - <NPM_ROOT>/@mariozechner/pi-coding-agent/dist/cli.js"
`;

exports[`Family G — Windows specifics > G4 — node.exe at C:\\Program Files\\nodejs\\node.exe 1`] = `
"name:   node
ok:     true
source: system
path:   C:/Program Files/nodejs/node.exe
tried:
  override     no override set
  managed      missing: <HOME>/.pi-dashboard/node_modules/.bin/node.cmd
  where        ok
argv:
  - C:/Program Files/nodejs/node.exe"
`;

exports[`Family J — minimal PATH > J1 — GUI-launched minimal PATH: pi does NOT resolve on posix (limitation) 1`] = `
"name:   pi
ok:     false
source: —
path:   —
tried:
  override     no override set
  managed      missing: <HOME>/.pi-dashboard/node_modules/.bin/pi
  where        not found on PATH"
`;
